# mesh-optimal-bounding-box

./: CMakeLists.txt  LICENSE  README.md
config/: l_hand_index_2.cfg  l_hand_index_3.cfg  l_hand_middle_1.cfg  l_hand_middle_2.cfg  l_hand_pinky_1.cfg  l_hand_pinky_2.cfg  l_hand_ring_1.cfg  l_hand_ring_2.cfg  l_hand_thumb_2.cfg  l_hand_thumb_3.cfg
include/: OptimalBoundingBox.h
src/: OptimalBoundingBox.cpp  main.cpp
